# lvgl_sim_qt

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
lvgl_qt/: CMakeLists.txt  LvglContext.cpp  LvglContext.hpp  LvglRenderer.cpp  LvglRenderer.hpp
lvgl_qt_quick/: CMakeLists.txt  LvglImageProvider.cpp  LvglImageProvider.hpp  main.cpp  main.qml
lvgl_qt_widgets/: CMakeLists.txt  LvglGraphicsView.cpp  LvglGraphicsView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
src/lvgl_qt_quick/: LvglImageProvider.cpp  LvglImageProvider.hpp  main.cpp  main.qml
src/lvgl_qt_widgets/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
